--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
                 <!-- Current trains-->
                 <div class="card mb-4">
-                    <div class="card-header">Current Train Schedule</div>
+                    <div class="card-header font-weight-bold">Current Train Schedule<span id="clock" class="text-right float-right"></span></div>
                     <div class="card-body">
                         <table class="table table-sm table-hover" id='train-sked'>
                             <thead>
@@ -69,7 +69,7 @@
             <div class="col-md-12">
                 <!-- Add train  -->
                 <div class="card mb-4">
-                    <div class="card-header">Add Train</div>
+                    <div class="card-header font-weight-bold">Add Train</div>
                     <div class="card-body">
 
                         <!-- Entry Form -->
